--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>ポートフォリオ</h2>
             <p>これまでに作成した作品の一部を紹介します。</p>
             <div class="portfolio-items">
-                <img src="stsrt-folder/work1.png" alt="作品1">
+                <img src="start-folder/work1.png" alt="作品1">
                 <img src="start-folder/work2.png" alt="作品2">
                 <img src="start-folder/work3.png" alt="作品3">
             </div>
