--- a/start-folder/contact.html
+++ b/start-folder/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>問い合わせフォーム</title>
-    <link rel="stylesheet" href="start-folder/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>問い合わせフォーム</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="index.html">ホーム</a></li>
+                <li><a href="/index.html">ホーム</a></li>
                 <li><a href="contact.html">問い合わせ</a></li>
             </ul>
         </nav>
